--- a/piedra-papel-tijera.ipynb
+++ b/piedra-papel-tijera.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PRIMERA PRUEBA**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -174,6 +181,21 @@
     "    print(f'{pregunta} es igual a {eleccion}')\n",
     "\n",
     "elif "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una manera de hacerlo puede ser en lugar de darles valor ir describiendo. Tipo:\n",
+    "\n",
+    "if jugador == piedra\n",
+    "    if eleccion == papel: Has perdido\n",
+    "    \n",
+    "    else eleccion == tijeras: Has ganado\n",
+    "\n",
+    "\n",
+    "Ir haciéndolo así con cada una de las posibilidades"
    ]
   }
  ],
