primer sprint geografia

--- a/geografia.ipynb
+++ b/geografia.ipynb
@@ -1,20 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "#nos descargamos la libreria random\n",
-    "from random import choices\n",
-    "   "
+    "Juego de preguntas y respuestas: es un juego en el que se hacen preguntas sobre una variedad de temas y los jugadores deben responder correctamente para avanzar. Las preguntas pueden ser de diferentes categorías, como historia, ciencias, entretenimiento o cultura general. El objetivo del juego es responder la mayor cantidad de preguntas correctamente para ganar el juego. Este juego puede ser jugado de forma individual o en equipo y es una forma divertida de aprender y poner a prueba tus conocimientos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nos descargamos la libreria random\n",
+    "from random import choices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +37,9 @@
      "output_type": "stream",
      "text": [
       "¡Respuesta correcta!\n",
-      "Respuesta incorrecta\n"
+      "¡---------------------!\n",
+      "Respuesta incorrecta, la respuesta correcta era Africa\n",
+      "---------------------\n"
      ]
     }
    ],
@@ -48,8 +55,9 @@
     "        print(\"¡Respuesta correcta!\")\n",
     "        ronda += 1\n",
     "        respuesta_usuario = False\n",
+    "        print(\"---------------------\")\n",
     "    else:\n",
-    "        print(\"Respuesta incorrecta\")\n",
+    "        print(\"Respuesta incorrecta, la respuesta correcta era\", respuesta.capitalize())\n",
     "        #vidas -= 1\n",
     "        ronda += 1\n",
     "        respuesta_usuario = False\n",
@@ -57,20 +65,8 @@
     "        #    print(\"Lo siento, no te quedan más vidas\")\n",
     "        #    respuesta_usuario = False\n",
     "        #print(f'te quedan {vidas} vidas')\n",
-    "        #print ('---------------------')"
+    "        print ('---------------------')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
