--- a/piedra-papel-tijera.ipynb
+++ b/piedra-papel-tijera.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Piedra Papel o Tijera:** este es un juego clásico en el que dos jugadores seleccionan una de tres opciones: Piedra, Papel o Tijera. Cada opción tiene una relación de victoria diferente: la Piedra vence a la Tijera, la Tijera vence al Papel y el Papel vence a la Piedra. El objetivo del juego es elegir la opción que vencerá a la opción seleccionada por el oponente. El juego se juega en rondas y el jugador que gana más rondas es el ganador del juego."
+    "# **Juego Piedra Papel o Tijera:**\n",
+    " Este es un juego clásico en el que dos jugadores seleccionan una de tres opciones: Piedra, Papel o Tijera. Cada opción tiene una relación de victoria diferente: la Piedra vence a la Tijera, la Tijera vence al Papel y el Papel vence a la Piedra. El objetivo del juego es elegir la opción que vencerá a la opción seleccionada por el oponente. El juego se juega en rondas y el jugador que gana más rondas es el ganador del juego."
    ]
   },
   {
@@ -13,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Primer paso importa random\n",
     "import random"
    ]
   },
@@ -25,20 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# creamos las tres variables\n",
-    "\n",
-    "piedra = 'piedra'\n",
-    "tijera = 'tijera'\n",
-    "papel = 'papel'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,18 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'random' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1397/1192741666.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# definimos la variable random\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0meleccion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista_juego\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meleccion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "piedra\n"
      ]
     }
    ],
@@ -93,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tijera es igual a tijera\n"
+      "papel es distinto a tijera\n"
      ]
     }
    ],
@@ -118,80 +103,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# tenemos que darle valor a las variables para que unas ganen a otras\n",
-    "\n",
-    "dicc_juego = {'tijera':1, 'papel':2, 'piedra':3}\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "**SEGUNDA PRUEBA**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tijera': 1, 'papel': 2, 'piedra': 3}\n",
-      "dict_values([1, 2, 3])\n"
+      "has perdido\n",
+      "tijera es igual a tijera\n",
+      "piedra es igual a piedra\n",
+      "has ganado\n",
+      "has ganado\n"
      ]
     }
    ],
    "source": [
-    "print(dicc_juego)\n",
-    "print(dicc_juego.values())\n",
-    "pregunta = input('Piedra, papel o tijera').lower()\n",
+    "#Creamos ronda/bucle while\n",
+    "ronda=1\n",
     "\n",
-    "if dicc_juego.values() == eleccion:\n",
-    "    print(f'{pregunta} es igual a {eleccion}')\n",
-    "\n",
-    "elif "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Una manera de hacerlo puede ser en lugar de darles valor ir describiendo. Tipo:\n",
-    "\n",
-    "if jugador == piedra\n",
-    "    if eleccion == papel: Has perdido\n",
+    "while ronda <=3:\n",
+    "    pregunta = input('Piedra, papel o tijera').lower()\n",
+    "    eleccion = random.choice(lista_juego) \n",
+    "    if pregunta == eleccion:\n",
+    "       print(f'{pregunta} es igual a {eleccion}')\n",
     "    \n",
-    "    else eleccion == tijeras: Has ganado\n",
-    "\n",
-    "\n",
-    "Ir haciéndolo así con cada una de las posibilidades"
+    "    elif pregunta == \"piedra\" and eleccion == \"tijera\":\n",
+    "        print(\"has ganado\")\n",
+    "        ronda +=1\n",
+    "    elif pregunta == 'papel' and eleccion == 'piedra':\n",
+    "        print (\"has ganado \")\n",
+    "        ronda +=1\n",
+    "    elif pregunta == 'tijera' and eleccion == 'papel':\n",
+    "        print(\"has ganado\")\n",
+    "        ronda +=1\n",
+    "    else:\n",
+    "        print(\"has perdido\")\n",
+    "        ronda +=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'random' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1472900062.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1397/1542071305.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpregunta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Piedra, papel o tijera'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0meleccion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista_juego\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mpregunta\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlista_juego\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"error, no sabes jugar\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_3817/1472900062.py\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    elif    pregunta == \"piedra\" and eleccion == \"tijera\" or  pregunta == 'papel' and eleccion == 'piedra' or\u001b[0m\n\u001b[0m                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "# que nos diga si es igual o no\n",
-    "\n",
+    "# Que nos diga si es empate\n",
     "pregunta = input('Piedra, papel o tijera').lower()\n",
     "eleccion = random.choice(lista_juego)\n",
     "if pregunta not in lista_juego:\n",
@@ -201,14 +175,15 @@
     "       print(f'{pregunta} es igual a {eleccion}')\n",
     "\n",
     "#ponemos todas las opciones ganadoras posibles\n",
-    "    elif ((pregunta == \"piedra\" and eleccion == \"tijera\") or  (pregunta == 'papel' and eleccion == 'piedra') or\n",
-    "            (pregunta == 'tijera' and eleccion == 'papel')\n",
-    "        ):\n",
+    "    elif    pregunta == \"piedra\" and eleccion == \"tijera\" or  pregunta == 'papel' and eleccion == 'piedra' or\n",
+    "            pregunta == 'tijera' and eleccion == 'papel':\n",
+    "        \n",
+    "        \n",
     "\n",
-    "        print(f\"{eleccion} ganaste\")\n",
+    "            print(f\"{eleccion} ganaste\")\n",
     "\n",
     "    else:\n",
-    "        print(f\"{eleccion} perdiste\")"
+    "            print(f\"{eleccion} perdiste\")"
    ]
   }
  ],
