--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['c', 'a', 'b', 'a', 'l', 'l', 'o']\n",
-      "caballo\n"
+      "['v', 'a', 'c', 'a']\n",
+      "vaca\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['_', '_', '_', '_', '_', '_', '_']"
+       "['_', '_', '_', '_']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,36 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "la c está en la palabra\n",
-      "['c', '_', '_', '_', '_', '_', '_']\n",
+      "la g no está en la palabra\n",
       "-----\n",
-      "la a está en la palabra\n",
-      "['c', 'a', '_', '_', '_', '_', '_']\n",
+      "la h no está en la palabra\n",
       "-----\n",
-      "la a está en la palabra\n",
-      "['c', 'a', '_', 'a', '_', '_', '_']\n",
+      "la r no está en la palabra\n",
       "-----\n",
-      "la b está en la palabra\n",
-      "['c', 'a', 'b', 'a', '_', '_', '_']\n",
+      "la u no está en la palabra\n",
       "-----\n",
-      "la l está en la palabra\n",
-      "['c', 'a', 'b', 'a', 'l', '_', '_']\n",
-      "-----\n",
-      "la l está en la palabra\n",
-      "['c', 'a', 'b', 'a', 'l', 'l', '_']\n",
-      "-----\n",
-      "la i no está en la palabra\n",
-      "-----\n",
-      "la t no está en la palabra\n",
-      "-----\n",
-      "has perdido\n"
+      "Has perdido\n"
      ]
     }
    ],
@@ -86,7 +72,7 @@
     "\n",
     "# Se inicia un bucle while que se ejecutará mientras la respuesta no sea igual a \"python\" y el jugador tenga al menos 1 vida.\n",
     "    \n",
-    "while intentos <=2:\n",
+    "while intentos <10 and \"_\" in caracter:\n",
     "    \n",
     "    letra= input(\"inserta una letra\").lower()\n",
     "    while letra in palabra_secreta1: \n",
@@ -95,10 +81,10 @@
     "        caracter.insert(i,letra)\n",
     "        palabra_secreta1.pop(i)\n",
     "        palabra_secreta1.insert(i,\"*\")\n",
-    "\n",
     "        print(f\"la {letra} está en la palabra\")\n",
     "        print(caracter)\n",
     "        print(\"-----\")\n",
+    "\n",
     "        if  \"_\" not in caracter :\n",
     "            print(\"has ganado\")\n",
     "            break\n",
@@ -107,7 +93,7 @@
     "        intentos +=1\n",
     "        print(\"-----\")\n",
     "    \n",
-    "else:\n",
+    "if intentos >= 10:\n",
     "    print(\"Has perdido\")\n"
    ]
   }
@@ -128,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
