geografia a falta del diccionario

--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['v', 'a', 'c', 'a']\n",
-      "vaca\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['_', '_', '_', '_']"
+       "['_', '_', '_', '_', '_', '_', '_']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,13 +19,18 @@
    "source": [
     "import random\n",
     "from random import choices\n",
-    "animales= [\"vaca\",\"perro\", \"gato\",\"caballo\" ]\n",
-    "palabra_secreta = random.choice(animales)\n",
+    "\n",
+    "animales = [\"Elefante\", \"Tigre\", \"Leon\", \"Jirafa\", \"Cebra\", \"Hipopotamo\", \"Oso\", \"Mono\", \"Lobo\", \"Gorila\",\n",
+    "            \"Pinguino\", \"Delfin\", \"Ballena\", \"Aguila\", \"Leopardo\", \"Rinoceronte\", \"Halcon\", \"Jaguar\", \"Orangutan\",\n",
+    "            \"Camello\", \"Koala\", \"Panda\", \"Serpiente\", \"Tortuga\", \"Tucan\", \"Canguro\", \"Cocodrilo\", \"Hormiga\"]\n",
+    "\n",
+    "\n",
+    "palabra_secreta = random.choice(animales).lower()\n",
     "\n",
     "palabra_secreta1=list(palabra_secreta)\n",
-    "print(palabra_secreta1)\n",
+    "#print(palabra_secreta1)\n",
     "\n",
-    "print(palabra_secreta)\n",
+    "#print(palabra_secreta)\n",
     "caracter=[]\n",
     "for letra in palabra_secreta:\n",
     "    caracter.append(\"_\")\n",
@@ -42,22 +39,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "la g no está en la palabra\n",
+      "la a está en la palabra\n",
+      "['_', 'a', '_', '_', '_', '_', '_']\n",
       "-----\n",
-      "la h no está en la palabra\n",
+      "la a está en la palabra\n",
+      "['_', 'a', '_', '_', '_', '_', 'a']\n",
       "-----\n",
-      "la r no está en la palabra\n",
+      "la b está en la palabra\n",
+      "['b', 'a', '_', '_', '_', '_', 'a']\n",
       "-----\n",
-      "la u no está en la palabra\n",
+      "la l está en la palabra\n",
+      "['b', 'a', 'l', '_', '_', '_', 'a']\n",
       "-----\n",
-      "Has perdido\n"
+      "la l está en la palabra\n",
+      "['b', 'a', 'l', 'l', '_', '_', 'a']\n",
+      "-----\n",
+      "la e está en la palabra\n",
+      "['b', 'a', 'l', 'l', 'e', '_', 'a']\n",
+      "-----\n",
+      "la n está en la palabra\n",
+      "['b', 'a', 'l', 'l', 'e', 'n', 'a']\n",
+      "-----\n",
+      "has ganado\n"
      ]
     }
    ],
@@ -83,7 +93,7 @@
     "        palabra_secreta1.insert(i,\"*\")\n",
     "        print(f\"la {letra} está en la palabra\")\n",
     "        print(caracter)\n",
-    "        print(\"-----\")\n",
+    "        print(\"------------\")\n",
     "\n",
     "        if  \"_\" not in caracter :\n",
     "            print(\"has ganado\")\n",
@@ -91,7 +101,7 @@
     "    if letra not in palabra_secreta:\n",
     "        print(f\"la {letra} no está en la palabra\")\n",
     "        intentos +=1\n",
-    "        print(\"-----\")\n",
+    "        print(\"------------\")\n",
     "    \n",
     "if intentos >= 10:\n",
     "    print(\"Has perdido\")\n"
