--- a/geografia.ipynb
+++ b/geografia.ipynb
@@ -23,8 +23,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#definimos una lista de preguntas y respuestas y sacamos una aleatora\n",
-    "preguntas = {\"¿En qué continente se encuentra Nueva York?\" : \"america\", \"¿En qué continente se encuentra Bombay?\" : \"asia\", \"¿En qué continente se encuentra París?\" : \"europa\", \"¿En qué continente se encuentra Australia?\" : \"oceania\", \"¿En qué continente se encuentra México?\" : \"america\", \"¿En qué continente se encuentra España?\" : \"europa\", \"¿En qué continente se encuentra Tokio?\" : \"asia\", \"¿En qué continente se encuentra Pekin?\" : \"asia\", \"¿En qué continente se encuentra Bruselas?\" : \"europa\", \"¿En qué continente se encuentra Bogota?\" : \"america\", \"¿En qué continente se encuentra Cuba?\": 'america', '¿En qué continente se encuentra Buenos Aires?': 'america', '¿En qué continente se encuentra Bangladesh?': 'asia', '¿En qué continente se encuentra Filipinas?': 'asia', '¿En qué continente se encuentra Mozambique?': 'africa', '¿En qué continente se encuentra Senegal?' : 'africa', '¿En qué continente se encuentra Ciudad del Cabo?': 'africa', '¿En qué continente se encuentra Afganistan?': 'asia','¿En qué continente se encuentra Alaska?' : 'américa', '¿En qué país se encuentra la Torre Eiffel?': 'francia'}\n"
+    "#definimos una lista de preguntas y respuestas y sacamos una aleatoria\n",
+    "\n",
+    "\n",
+    "#TENEMOS QUE HACER EL DICCIONARIO DEFINITIVO Y QUE:\n",
+    "    #NO TENGA TILDES EN LAS RESPUESTAS O SEPAMOS COMO QUITARSELAS \n",
+    "    #QUITAR PREGUNTAS CON RESPUESTAS QUE PUEDAN DAR A ERROR TIPO: CORDILLERA DE LOS ANDES / LOS ANDES\n",
+    "\n",
+    "preguntas = {\n",
+    "    \"¿Cuál es la capital de España?\": \"Madrid\",\n",
+    "    \"¿En qué continente se encuentra Egipto?\": \"África\",\n",
+    "    \"¿Cuál es el río más largo de Europa?\": \"Volga\",\n",
+    "    \"¿Cuántos países forman parte de la Unión Europea en 2024?\": \"27\",\n",
+    "    \"¿Cuál es la montaña más alta del mundo?\": \"Monte Everest\",\n",
+    "    \"¿En qué país se encuentra el desierto del Sahara?\": \"Marruecos\",\n",
+    "    \"¿Cuál es la capital de Canadá?\": \"Ottawa\",\n",
+    "    \"¿Cuántos océanos hay en la Tierra?\": \"5\",\n",
+    "    \"¿En qué país se encuentra el lago Titicaca?\": \"Perú\",\n",
+    "    \"¿Cuál es la capital de Australia?\": \"Camberra\",\n",
+    "    \"¿Cuál es el país más grande del mundo por área terrestre?\": \"Rusia\",\n",
+    "    \"¿En qué continente se encuentra la Gran Barrera de Coral?\": \"Oceanía\",\n",
+    "    \"¿Cuál es la capital de Argentina?\": \"Buenos Aires\",\n",
+    "    \"¿Cuántos estados tiene Estados Unidos?\": \"50\",\n",
+    "    \"¿En qué país se encuentra la ciudad de Petra?\": \"Jordania\",\n",
+    "    \"¿Cuál es la capital de Sudáfrica?\": \"Ciudad del Cabo\",\n",
+    "    \"¿En qué país se encuentra el volcán Kilimanjaro?\": \"Tanzania\",\n",
+    "    \"¿Cuál es el estrecho que separa Europa de África?\": \"Gibraltar\",\n",
+    "    \"¿En qué país se encuentra la ciudad de Kioto?\": \"Japón\",\n",
+    "    \"¿Cuál es el país más pequeño del mundo?\": \"Ciudad del Vaticano\",\n",
+    "    \"¿En qué continente se encuentra el río Amazonas?\": \"Sudamérica\",\n",
+    "    \"¿Cuál es la capital de Turquía?\": \"Ankara\",\n",
+    "    \"¿En qué país se encuentra la Gran Muralla China?\": \"China\",\n",
+    "    \"¿Cuál es el punto más bajo de la Tierra?\": \"Mar Muerto\",\n",
+    "    \"¿En qué país se encuentra el Parque Nacional de Yellowstone?\": \"Estados Unidos\",\n",
+    "    \"¿Cuál es la capital de Chile?\": \"Santiago\",\n",
+    "    \"¿En qué país se encuentra el monte Kilimanjaro?\": \"Tanzania\",\n",
+    "    \"¿Cuál es la longitud del río Nilo?\": \"Aproximadamente 6,650 km\",\n",
+    "    \"¿En qué país se encuentra el Canal de Panamá?\": \"Panamá\",\n",
+    "    \"¿Cuál es la capital de Italia?\": \"Roma\",\n",
+    "    \"¿En qué país se encuentra la ciudad de Casablanca?\": \"Marruecos\",\n",
+    "    \"¿Cuál es la capital de India?\": \"Nueva Delhi\",\n",
+    "    \"¿En qué país se encuentra la ciudad de Cuzco?\": \"Perú\",\n",
+    "    \"¿Cuál es el punto más alto de América del Norte?\": \"Monte McKinley (Denali)\",\n",
+    "    \"¿En qué país se encuentra la isla de Bali?\": \"Indonesia\",\n",
+    "    \"¿Cuál es la capital de Rusia?\": \"Moscú\",\n",
+    "    \"¿En qué continente se encuentra el río Danubio?\": \"Europa\",\n",
+    "    \"¿Cuál es la capital de México?\": \"Ciudad de México\",\n",
+    "    \"¿En qué país se encuentra el desierto de Atacama?\": \"Chile\",\n",
+    "    \"¿Cuál es el lago más grande de África?\": \"Lago Victoria\",\n",
+    "    \"¿En qué país se encuentra la ciudad de Dublín?\": \"Irlanda\",\n",
+    "    \"¿Cuál es la capital de Sudán?\": \"Jartum\",\n",
+    "    \"¿En qué continente se encuentra el río Yangtsé?\": \"Asia\",\n",
+    "    \"¿Cuál es la capital de Sudán del Sur?\": \"Yuba\",\n",
+    "    \"¿En qué país se encuentra la ciudad de Estambul?\": \"Turquía\",\n",
+    "    \"¿Cuál es la cordillera más larga del mundo?\": \"Cordillera de los Andes\",\n",
+    "    \"¿En qué continente se encuentra el río Támesis?\": \"Europa\",\n",
+    "    \"¿Cuál es la capital de Sudán del Sur?\": \"Yuba\",\n",
+    "    \"¿En qué país se encuentra el monte Fuji?\": \"Japón\",\n",
+    "    \"¿Cuál es el lago más profundo del mundo?\": \"Lago Baikal\",\n",
+    "    \"¿En qué continente se encuentra el río Misisipi?\": \"América del Norte\",\n",
+    "    \"¿Cuál es la capital de Colombia?\": \"Bogotá\",\n",
+    "    \"¿En qué país se encuentra el desierto del Gobi?\": \"Mongolia\",\n",
+    "    \"¿Cuál es la capital de Noruega?\": \"Oslo\",\n",
+    "    \"¿En qué continente se encuentra el río Congo?\": \"África\",\n",
+    "}"
    ]
   },
   {
@@ -36,37 +98,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Respuesta incorrecta, la respuesta correcta no era no se sino Jordania\n",
+      "---------------------\n",
+      "Respuesta incorrecta, la respuesta correcta no era america sino América del Norte\n",
+      "---------------------\n",
+      "Respuesta incorrecta, la respuesta correcta no era 25 sino 27\n",
+      "---------------------\n",
       "¡Respuesta correcta!\n",
-      "¡---------------------!\n",
-      "Respuesta incorrecta, la respuesta correcta era Africa\n",
-      "---------------------\n"
+      "---------------------\n",
+      "Respuesta incorrecta, la respuesta correcta no era china sino Tanzania\n",
+      "---------------------\n",
+      "Respuesta incorrecta, la respuesta correcta no era no se sino Chile\n",
+      "---------------------\n",
+      "¡Respuesta correcta!\n",
+      "---------------------\n",
+      "Respuesta incorrecta, la respuesta correcta no era ciudad de mexico sino Ciudad de México\n",
+      "---------------------\n",
+      "¡Respuesta correcta!\n",
+      "---------------------\n",
+      "¡Respuesta correcta!\n",
+      "---------------------\n",
+      "Has acertado 4 preguntas, no está mal pero se puede mejorar\n"
      ]
     }
    ],
    "source": [
-    "#sacamos una pregunta, respuesta aleatoria y la preguntamos al usuario. de momento hemos puesto 2 rondas para probar\n",
     "\n",
-    "#vidas = 3\n",
+    "\n",
+    "puntos = 0\n",
     "ronda = 1\n",
-    "while ronda <=2:\n",
+    "\n",
+    "#Creamos un bucle para cada ronda de pregunta\n",
+    "while ronda <=10:\n",
+    "    #sacamos las preguntas y respuestas aleatoriamente y pasamos la respuesta a minuscula para poder compararla\n",
     "    pregunta, respuesta = choices(list(preguntas.items()), k=1)[0]\n",
-    "    respuesta_usuario = (input(pregunta)).lower()\n",
-    "    if respuesta_usuario == respuesta:\n",
+    "    respuesta_minuscula = respuesta.lower()\n",
+    "\n",
+    "    #le pedimos una respuesta al usuario y la pasamos a minuscula para poder compararla\n",
+    "    respuesta_usuario = (input(pregunta))\n",
+    "    respuesta_usuario_minuscula = respuesta_usuario.lower()\n",
+    "\n",
+    "    #si la respuesta buena y la del usuario es la misma ha acertado\n",
+    "    if respuesta_usuario_minuscula == respuesta_minuscula:\n",
     "        print(\"¡Respuesta correcta!\")\n",
+    "        puntos += 1\n",
     "        ronda += 1\n",
-    "        respuesta_usuario = False\n",
     "        print(\"---------------------\")\n",
+    "\n",
+    "    #de lo contrario ha fallado\n",
     "    else:\n",
-    "        print(\"Respuesta incorrecta, la respuesta correcta era\", respuesta.capitalize())\n",
-    "        #vidas -= 1\n",
+    "        print(\"Respuesta incorrecta, la respuesta correcta no era\", respuesta_usuario, \"sino\", respuesta)\n",
     "        ronda += 1\n",
-    "        respuesta_usuario = False\n",
-    "        #if vidas==0:\n",
-    "        #    print(\"Lo siento, no te quedan más vidas\")\n",
-    "        #    respuesta_usuario = False\n",
-    "        #print(f'te quedan {vidas} vidas')\n",
-    "        print ('---------------------')"
+    "        print ('---------------------')\n",
+    "\n",
+    "#clasificatoria\n",
+    "\n",
+    "if puntos == 0:\n",
+    "    print(f\"No has acertado ninguna pregunta, deberías mirar algún mapa\")\n",
+    "\n",
+    "elif 0< puntos < 4:\n",
+    "    print(f\"Solo has acertado {puntos} preguntas, sigue practicando\")\n",
+    "    \n",
+    "elif 4 <= puntos <=6:\n",
+    "    print(f\"Has acertado {puntos} preguntas, no está mal pero se puede mejorar\")\n",
+    "\n",
+    "elif 7<= puntos <=9:\n",
+    "    print(f\"Has acertado {puntos} preguntas. Felicidades, veo que la geografia se te da genial\")\n",
+    "\n",
+    "else: \n",
+    "    print(f\"Has acertado todas las preguntas ¡Enhorabuena!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
