--- a/piedra-papel-tijera.ipynb
+++ b/piedra-papel-tijera.ipynb
@@ -151,39 +151,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1472900062.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_3817/1472900062.py\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    elif    pregunta == \"piedra\" and eleccion == \"tijera\" or  pregunta == 'papel' and eleccion == 'piedra' or\u001b[0m\n\u001b[0m                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "# Que nos diga si es empate\n",
-    "pregunta = input('Piedra, papel o tijera').lower()\n",
-    "eleccion = random.choice(lista_juego)\n",
-    "if pregunta not in lista_juego:\n",
-    "    print(\"error, no sabes jugar\")\n",
+    "**TERCERA PRUEBA**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Primer paso importa random\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ronda=1\n",
+    "victorias_usuario=0\n",
+    "victorias_ordenador=0\n",
     "\n",
+    "while ronda <=3:\n",
+    "    pregunta = input('Piedra, papel o tijera').lower()\n",
+    "    eleccion = random.choice(lista_juego) \n",
     "    if pregunta == eleccion:\n",
-    "       print(f'{pregunta} es igual a {eleccion}')\n",
-    "\n",
-    "#ponemos todas las opciones ganadoras posibles\n",
-    "    elif    pregunta == \"piedra\" and eleccion == \"tijera\" or  pregunta == 'papel' and eleccion == 'piedra' or\n",
-    "            pregunta == 'tijera' and eleccion == 'papel':\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "            print(f\"{eleccion} ganaste\")\n",
-    "\n",
+    "        print(f'{pregunta} es igual a {eleccion}')\n",
+    "        print('----')\n",
+    "    \n",
+    "    elif pregunta == \"piedra\" and eleccion == \"tijera\":\n",
+    "        print(f'RONDA {ronda}')\n",
+    "        print(\"🪨 gana ✂️\")\n",
+    "        victorias_usuario +=1\n",
+    "        ronda +=1\n",
+    "        print('----')\n",
+    "    elif pregunta == 'papel' and eleccion == 'piedra':\n",
+    "        print(f'RONDA {ronda}')\n",
+    "        print (\"🧻 gana 🪨\")\n",
+    "        victorias_usuario +=1\n",
+    "        ronda +=1\n",
+    "        print('----')\n",
+    "    elif pregunta == 'tijera' and eleccion == 'papel':\n",
+    "        print(f'RONDA {ronda}')\n",
+    "        print(\"✂️ gana 🧻\")\n",
+    "        ronda +=1\n",
+    "        victorias_usuario +=1\n",
+    "        print('----')\n",
     "    else:\n",
-    "            print(f\"{eleccion} perdiste\")"
+    "        print(f'RONDA {ronda}')\n",
+    "        print(\"Has perdido 🥲\")\n",
+    "        victorias_ordenador +=1\n",
+    "        ronda +=1\n",
+    "        print('----')\n",
+    "if victorias_usuario > victorias_ordenador:\n",
+    "    print(f'¡OLÉ!¡VAMOS CRACK! 🥳🪩👯')\n",
+    "else:\n",
+    "    print(f'Vuelve a intentarlo 😭')"
    ]
   }
  ],
