--- a/geografia.ipynb
+++ b/geografia.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "#nos descargamos la libreria random\n",
-    "from random import choices"
+    "from random import choices\n",
+    "import unidecode"
    ]
   },
   {
@@ -25,21 +26,14 @@
    "source": [
     "#definimos una lista de preguntas y respuestas y sacamos una aleatoria\n",
     "\n",
-    "\n",
-    "#TENEMOS QUE HACER EL DICCIONARIO DEFINITIVO Y QUE:\n",
-    "    #NO TENGA TILDES EN LAS RESPUESTAS O SEPAMOS COMO QUITARSELAS \n",
-    "    #QUITAR PREGUNTAS CON RESPUESTAS QUE PUEDAN DAR A ERROR TIPO: CORDILLERA DE LOS ANDES / LOS ANDES\n",
-    "\n",
     "preguntas = {\n",
     "    \"¿Cuál es la capital de España?\": \"Madrid\",\n",
     "    \"¿En qué continente se encuentra Egipto?\": \"África\",\n",
     "    \"¿Cuál es el río más largo de Europa?\": \"Volga\",\n",
-    "    \"¿Cuántos países forman parte de la Unión Europea en 2024?\": \"27\",\n",
-    "    \"¿Cuál es la montaña más alta del mundo?\": \"Monte Everest\",\n",
+    "    \"¿Cuál es la montaña más alta del mundo?\": \"Everest\",\n",
     "    \"¿En qué país se encuentra el desierto del Sahara?\": \"Marruecos\",\n",
     "    \"¿Cuál es la capital de Canadá?\": \"Ottawa\",\n",
     "    \"¿Cuántos océanos hay en la Tierra?\": \"5\",\n",
-    "    \"¿En qué país se encuentra el lago Titicaca?\": \"Perú\",\n",
     "    \"¿Cuál es la capital de Australia?\": \"Camberra\",\n",
     "    \"¿Cuál es el país más grande del mundo por área terrestre?\": \"Rusia\",\n",
     "    \"¿En qué continente se encuentra la Gran Barrera de Coral?\": \"Oceanía\",\n",
@@ -50,38 +44,31 @@
     "    \"¿En qué país se encuentra el volcán Kilimanjaro?\": \"Tanzania\",\n",
     "    \"¿Cuál es el estrecho que separa Europa de África?\": \"Gibraltar\",\n",
     "    \"¿En qué país se encuentra la ciudad de Kioto?\": \"Japón\",\n",
-    "    \"¿Cuál es el país más pequeño del mundo?\": \"Ciudad del Vaticano\",\n",
-    "    \"¿En qué continente se encuentra el río Amazonas?\": \"Sudamérica\",\n",
+    "    \"¿Cuál es el país más pequeño del mundo?\": \"Vaticano\",\n",
+    "    \"¿En qué continente se encuentra el río Amazonas?\": \"América\",\n",
     "    \"¿Cuál es la capital de Turquía?\": \"Ankara\",\n",
     "    \"¿En qué país se encuentra la Gran Muralla China?\": \"China\",\n",
     "    \"¿Cuál es el punto más bajo de la Tierra?\": \"Mar Muerto\",\n",
     "    \"¿En qué país se encuentra el Parque Nacional de Yellowstone?\": \"Estados Unidos\",\n",
-    "    \"¿Cuál es la capital de Chile?\": \"Santiago\",\n",
     "    \"¿En qué país se encuentra el monte Kilimanjaro?\": \"Tanzania\",\n",
-    "    \"¿Cuál es la longitud del río Nilo?\": \"Aproximadamente 6,650 km\",\n",
     "    \"¿En qué país se encuentra el Canal de Panamá?\": \"Panamá\",\n",
     "    \"¿Cuál es la capital de Italia?\": \"Roma\",\n",
     "    \"¿En qué país se encuentra la ciudad de Casablanca?\": \"Marruecos\",\n",
     "    \"¿Cuál es la capital de India?\": \"Nueva Delhi\",\n",
     "    \"¿En qué país se encuentra la ciudad de Cuzco?\": \"Perú\",\n",
-    "    \"¿Cuál es el punto más alto de América del Norte?\": \"Monte McKinley (Denali)\",\n",
     "    \"¿En qué país se encuentra la isla de Bali?\": \"Indonesia\",\n",
     "    \"¿Cuál es la capital de Rusia?\": \"Moscú\",\n",
     "    \"¿En qué continente se encuentra el río Danubio?\": \"Europa\",\n",
     "    \"¿Cuál es la capital de México?\": \"Ciudad de México\",\n",
     "    \"¿En qué país se encuentra el desierto de Atacama?\": \"Chile\",\n",
-    "    \"¿Cuál es el lago más grande de África?\": \"Lago Victoria\",\n",
     "    \"¿En qué país se encuentra la ciudad de Dublín?\": \"Irlanda\",\n",
     "    \"¿Cuál es la capital de Sudán?\": \"Jartum\",\n",
     "    \"¿En qué continente se encuentra el río Yangtsé?\": \"Asia\",\n",
     "    \"¿Cuál es la capital de Sudán del Sur?\": \"Yuba\",\n",
     "    \"¿En qué país se encuentra la ciudad de Estambul?\": \"Turquía\",\n",
-    "    \"¿Cuál es la cordillera más larga del mundo?\": \"Cordillera de los Andes\",\n",
     "    \"¿En qué continente se encuentra el río Támesis?\": \"Europa\",\n",
-    "    \"¿Cuál es la capital de Sudán del Sur?\": \"Yuba\",\n",
     "    \"¿En qué país se encuentra el monte Fuji?\": \"Japón\",\n",
-    "    \"¿Cuál es el lago más profundo del mundo?\": \"Lago Baikal\",\n",
-    "    \"¿En qué continente se encuentra el río Misisipi?\": \"América del Norte\",\n",
+    "    \"¿En qué continente se encuentra el río Misisipi?\": \"América\",\n",
     "    \"¿Cuál es la capital de Colombia?\": \"Bogotá\",\n",
     "    \"¿En qué país se encuentra el desierto del Gobi?\": \"Mongolia\",\n",
     "    \"¿Cuál es la capital de Noruega?\": \"Oslo\",\n",
@@ -98,27 +85,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Respuesta incorrecta, la respuesta correcta no era no se sino Jordania\n",
+      "¡Muy bien! La respuesta correcta es Ciudad de México\n",
       "---------------------\n",
-      "Respuesta incorrecta, la respuesta correcta no era america sino América del Norte\n",
+      "¡Muy bien! La respuesta correcta es Marruecos\n",
       "---------------------\n",
-      "Respuesta incorrecta, la respuesta correcta no era 25 sino 27\n",
+      "¡Muy bien! La respuesta correcta es Ottawa\n",
       "---------------------\n",
-      "¡Respuesta correcta!\n",
+      "¡Muy bien! La respuesta correcta es Estados Unidos\n",
       "---------------------\n",
-      "Respuesta incorrecta, la respuesta correcta no era china sino Tanzania\n",
+      "¡Muy bien! La respuesta correcta es Japón\n",
       "---------------------\n",
-      "Respuesta incorrecta, la respuesta correcta no era no se sino Chile\n",
+      "Respuesta incorrecta, la respuesta correcta no era Yuba sino Jartum\n",
       "---------------------\n",
-      "¡Respuesta correcta!\n",
+      "¡Muy bien! La respuesta correcta es Irlanda\n",
       "---------------------\n",
-      "Respuesta incorrecta, la respuesta correcta no era ciudad de mexico sino Ciudad de México\n",
+      "Respuesta incorrecta, la respuesta correcta no era America del norte sino Sudamérica\n",
       "---------------------\n",
-      "¡Respuesta correcta!\n",
+      "¡Muy bien! La respuesta correcta es Europa\n",
       "---------------------\n",
-      "¡Respuesta correcta!\n",
+      "¡Muy bien! La respuesta correcta es Jordania\n",
       "---------------------\n",
-      "Has acertado 4 preguntas, no está mal pero se puede mejorar\n"
+      "Has acertado 8 preguntas. Felicidades, veo que la geografia se te da genial\n"
      ]
     }
    ],
@@ -130,17 +117,25 @@
     "\n",
     "#Creamos un bucle para cada ronda de pregunta\n",
     "while ronda <=10:\n",
-    "    #sacamos las preguntas y respuestas aleatoriamente y pasamos la respuesta a minuscula para poder compararla\n",
+    "    #sacamos las preguntas y respuestas aleatoriamente \n",
     "    pregunta, respuesta = choices(list(preguntas.items()), k=1)[0]\n",
+    "\n",
+    "    #borramos la pregunta de la lista para que no la repita\n",
+    "    preguntas.pop(pregunta)\n",
+    "\n",
+    "    #pasamos la respuesta a minuscula y quitamos tildespara poder compararla\n",
+    "\n",
     "    respuesta_minuscula = respuesta.lower()\n",
+    "    respuesta_notilde = unidecode.unidecode(respuesta_minuscula)\n",
     "\n",
     "    #le pedimos una respuesta al usuario y la pasamos a minuscula para poder compararla\n",
     "    respuesta_usuario = (input(pregunta))\n",
     "    respuesta_usuario_minuscula = respuesta_usuario.lower()\n",
+    "    respuesta_usuario_notilde = unidecode.unidecode(respuesta_usuario_minuscula)\n",
     "\n",
     "    #si la respuesta buena y la del usuario es la misma ha acertado\n",
-    "    if respuesta_usuario_minuscula == respuesta_minuscula:\n",
-    "        print(\"¡Respuesta correcta!\")\n",
+    "    if respuesta_usuario_notilde == respuesta_notilde:\n",
+    "        print(f\"¡Muy bien! La respuesta correcta es {respuesta}\")\n",
     "        puntos += 1\n",
     "        ronda += 1\n",
     "        print(\"---------------------\")\n",
