--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tucan\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['_', '_', '_', '_', '_', '_', '_']"
+       "['_', '_', '_', '_', '_']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,15 +26,19 @@
    "source": [
     "import random\n",
     "from random import choices\n",
+    "import unidecode\n",
     "\n",
-    "animales = [\"Elefante\", \"Tigre\", \"Leon\", \"Jirafa\", \"Cebra\", \"Hipopotamo\", \"Oso\", \"Mono\", \"Lobo\", \"Gorila\",\n",
-    "            \"Pinguino\", \"Delfin\", \"Ballena\", \"Aguila\", \"Leopardo\", \"Rinoceronte\", \"Halcon\", \"Jaguar\", \"Orangutan\",\n",
-    "            \"Camello\", \"Koala\", \"Panda\", \"Serpiente\", \"Tortuga\", \"Tucan\", \"Canguro\", \"Cocodrilo\", \"Hormiga\"]\n",
+    "\n",
+    "animales = [\"Elefante\", \"Tigre\", \"Jirafa\", \"Cebra\", \"Hipopótamo\", \"Oso\", \"Mono\", \"Lobo\", \"Gorila\",\n",
+    "            \"Pinguino\", \"Delfín\", \"Ballena\", \"Águila\", \"Leopardo\", \"Rinoceronte\", \"Halcón\", \"Jaguar\", \"Ratón\", \"León\", \"Orangután\",\n",
+    "            \"Camello\", \"Koala\", \"Panda\", \"Serpiente\", \"Tortuga\", \"Tucán\", \"Canguro\", \"Cocodrilo\", \"Hormiga\"]\n",
     "\n",
     "\n",
     "palabra_secreta = random.choice(animales).lower()\n",
     "\n",
-    "palabra_secreta1=list(palabra_secreta)\n",
+    "palabra_notilde = unidecode.unidecode(palabra_secreta)\n",
+    "\n",
+    "palabra_secreta1=list(palabra_notilde)\n",
     "#print(palabra_secreta1)\n",
     "\n",
     "#print(palabra_secreta)\n",
